<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/order_by_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/order_by_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/articles_order"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toTopOf="@id/top"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/articles_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_spacing"
        app:layout_constraintBottom_toTopOf="@id/time_range_label"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/order_by_label"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/relevance_chip_order"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relevance_label" />

        <com.google.android.material.chip.Chip
            android:id="@+id/newest_chip_order"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newest_label" />

        <com.google.android.material.chip.Chip
            android:id="@+id/oldest_chip_order"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oldest_label" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/time_range_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_spacing"
        android:gravity="center"
        android:text="@string/time_range_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/select_range_date_button"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/articles_order" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_range_date_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_date_range_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/time_range_label" />

    <include layout="@layout/screen_edges" />

</androidx.constraintlayout.widget.ConstraintLayout>